Fix hero image distortion by using high-res asset

--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('hero-bg.png') center center / cover no-repeat;
+  background: url('assets/HERO.png') center center / cover no-repeat;
   animation: kenBurns 20s ease-out infinite alternate;
   z-index: 1;
 }
